# tasklocal

./: pyproject.toml
src/tasklocal/: __init__.py  storage.py
tests/: test_main.py
